redefined HWs vs FPMs; updated assignment schedule

--- a/course-materials/assignments/FPM2.qmd
+++ b/course-materials/assignments/FPM2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "HW #4: Final Project (Exploratory Data Visualization)"
+title: "FPM #2: Exploratory Data Visualization"
 subtitle: "Assigned Wed 01/28/2026 | Due Wed 02/04/2026"
 editor_options: 
   chunk_output_type: console
