--- a/course-materials/assignments/FPM3.qmd
+++ b/course-materials/assignments/FPM3.qmd
@@ -1,5 +1,5 @@
 ---
-title: "HW #6: Final Project (Drafting Visualizations)"
+title: "FPM #3: Drafting Visualizations"
 subtitle: "Assigned Wed 02/11/2026 | Due Wed 02/25/2026"
 ---
 
