--- a/course-materials/assignments/FPM4.qmd
+++ b/course-materials/assignments/FPM4.qmd
@@ -1,6 +1,6 @@
 ---
-title: "HW #7: Final Project (Infographic + Blog Post)"
-subtitle: "Assigned Wed 02/25/2026 | Due Wed 03/11/2026"
+title: "FPM #4: Infographic & Blog Post"
+subtitle: "Assigned Wed 02/25/2026 | Due Sun 03/08/2026"
 ---
 
 ::: {.callout-important}
