--- a/course-materials/assignments/FPM5.qmd
+++ b/course-materials/assignments/FPM5.qmd
@@ -1,4 +1,4 @@
 ---
-title: "HW #8: Final Project (Presentation)"
+title: "FPM #5: Flash Talk"
 subtitle: "Assigned Wed 03/11/2026 | Due Thu 03/19/2026"
 ---
