--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Data Visualization & Communication"
 subtitle: "Master of Environmental Data Science (MEDS)"
-description: "Winter 2025"
+description: "Winter 2026"
 title-block-banner: false
 toc: false
 ---
@@ -51,7 +51,7 @@ knitr::include_graphics("images/EDS240-hex.png")
 <br>
 
 ::: {.grid}
-::: {.g-col-12 .g-col-md-4}
+::: {.g-col-12 .g-col-md-6}
 
 ::: {.center-text .body-text-l}
 **Instructor**
@@ -73,10 +73,10 @@ knitr::include_graphics("images/sam.png")
 
 :::
 
-::: {.g-col-12 .g-col-md-4}
+::: {.g-col-12 .g-col-md-6}
 
 ::: {.center-text .body-text-l}
-**TA**
+**Co-Instructor**
 :::
 
 ```{r}
@@ -95,27 +95,6 @@ knitr::include_graphics("images/annie.png")
 
 :::
 
-::: {.g-col-12 .g-col-md-4}
-
-::: {.center-text .body-text-l}
-**TA**
-:::
-
-```{r}
-#| eval: true 
-#| echo: false
-#| fig-align: "center"
-#| out-width: "50%" 
-knitr::include_graphics("images/tbd.png")
-```
-
-::: {.center-text}
-[**Sloane Stephenson**]{.teal-text}  
-**Email:** [gstephenson@ucsb.edu](mailto::gstephenson@ucsb.edu)
-<!-- **Learn more:** tbd -->
-:::
-
-:::
 :::
 
 ## Acknowledgements
