--- a/assignments.qmd
+++ b/assignments.qmd
@@ -7,7 +7,7 @@ title-block-banner: true
 ## Calendar
 
 ::: {.callout-important}
-**All HWs and SRs are due at 11:59pm** on the dates listed. HWs will always be due on Wednesdays and SRs will always be due on Fridays.
+**All HWs and SRs are due at 11:59pm** on the dates listed.
 :::
 
 <iframe src="https://calendar.google.com/calendar/embed?src=c_aaded740ae1fc6f435d3c50725f02f449004617267c9e8e96011b320974b7faf%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
@@ -20,17 +20,17 @@ You will be building towards your final project deliverables -- a data-driven in
 
 | Assignment Type         | Assignment Title                      | Date Assigned   | Date Due           |
 |:------------------------|---------------------------------------|----------------|---------------------|
-| SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1-precourse.qmd) | Wed 01/07/2026 | Fri 01/09/2026      |
-| HW                      | [Homework Assignment #1](course-materials/assignments/HW1.qmd)                | Wed 01/07/2026 | Wed 01/14/2026      |
-| HW                      | [Homework Assignment #2](course-materials/assignments/HW2.qmd) (final project)               | Wed 01/14/2026 | Wed 01/21/2026      | 
-| HW                      | [Homework Assignment #3](course-materials/assignments/HW3.qmd)                | Wed 01/21/2026 | Wed 01/28/2026      | 
-| HW                      | [Homework Assignment #4](course-materials/assignments/HW4.qmd) (final project)               | Wed 01/28/2026 | Wed 02/04/2026      | 
-| SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2-midcourse.qmd) | Wed 02/04/2026 | Fri 02/06/2026      |
-| HW                      | [Homework Assignment #5](course-materials/assignments/HW5.qmd)                   | Wed 02/04/2026 | Wed 02/11/2026      | 
-| HW                      | [Homework Assignment #6](course-materials/assignments/HW6.qmd) (final project)               | Wed 02/11/2026 | Wed 02/25/2026      | 
-| HW                      | [Homework Assignment #7](course-materials/assignments/HW7.qmd) (final project) | Wed 02/25/2026          | Wed 03/11/2026 |
-| SR                      | [End-of-course reflection (SR #3)](course-materials/assignments/SR3-endcourse.qmd)      | Wed 03/11/2026 | Fri 03/13/2026     |
-| HW                      | [Homework Assignment #8](course-materials/assignments/HW4.qmd) (final project) | Wed 03/11/2026           | Thu 03/19/2026 |
+| SR                      | [Pre-course reflection (SR #1)](course-materials/assignments/SR1-precourse.qmd) | Wed 01/07/2026 | Fri 01/09/2026 |
+| HW                      | [Homework #1](course-materials/assignments/HW1.qmd)  | Wed 01/07/2026 | Wed 01/14/2026 |
+| FPM                     | [Final Project Milestone #1](course-materials/assignments/FPM1.qmd) | Wed 01/14/2026 | Wed 01/21/2026 | 
+| HW                      | [Homework #2](course-materials/assignments/HW2.qmd) | Wed 01/21/2026 | Wed 01/28/2026 | 
+| FPM                     | [Final Project Milestone #2](course-materials/assignments/FPM2.qmd) | Wed 01/28/2026 | Wed 02/04/2026 | 
+| SR                      | [Mid-course reflection (SR #2)](course-materials/assignments/SR2-midcourse.qmd) | Wed 02/04/2026 | Fri 02/06/2026 |
+| HW                      | [Homework #3](course-materials/assignments/HW3.qmd) | Wed 02/04/2026 | Wed 02/11/2026 | 
+| FPM                     | [Final Project Milestone #3](course-materials/assignments/FPM3.qmd) | Wed 02/11/2026 | Wed 02/25/2026 | 
+| FPM                     | [Final Project Milestone #4](course-materials/assignments/FPM4.qmd) | Wed 02/25/2026 | Sun 03/08/2026 |
+| SR                      | [End-of-course reflection (SR #3)](course-materials/assignments/SR3-endcourse.qmd) | Wed 03/11/2026 | Fri 03/13/2026 |
+| FPM                      | [Final Project Milestone #5](course-materials/assignments/FPM5.qmd) | Wed 03/11/2026 | Thu 03/19/2026 |
 : {tbl-colwidths="[22,38,20,20]"} 
 
 <!-- ::: {.callout-important} -->
@@ -52,16 +52,16 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 
 | EOC link                     | Date Assigned  | Date Due       |
 |------------------------------|----------------|----------------|
-| [EOC (week 1)](https://forms.gle/RGd3qzQR4ue9HvfR8)                 | Mon 01/06/2025 | Mon 01/06/2025 |
-| [EOC (week 2)](https://forms.gle/XMnf7cxrxmbcAA5k6)                 | Mon 01/13/2025 | Mon 01/13/2025 |
-| *No lecture or EOC (week 3)* | *NA*           | *NA*           |
-| [EOC (week 4)](https://forms.gle/nt5R8YBh8VHqdmpE8)                 | Mon 01/27/2025 | Mon 01/27/2025 |
-| [EOC (week 5)](https://forms.gle/McTeZ2LN4KLV9WeSA)                 | Mon 02/03/2025 | Mon 02/03/2025 |
-| [EOC (week 6)](https://forms.gle/kHYik4562kYQfSbR8)                 | Mon 02/10/2025 | Mon 02/10/2025 |
-| *No lecture or EOC (week 7)* | *NA*           | *NA*           |
-| [EOC (week 8)](https://forms.gle/Qvce8dggyWps19og6)                 | Mon 02/24/2025 | Mon 02/24/2025 |
-| [EOC (week 9)](https://forms.gle/s2CYKfaHYY79cR4d6)                 | Mon 03/03/2025 | Mon 03/03/2025 |
-| [EOC (week 10)](https://forms.gle/VT4GfL4kGtL4jwNG8)                | Mon 03/10/2025 | Mon 03/10/2025 |
+| EOC (week 1)                 | Wed 01/07/2026 | Wed 01/07/2026 |
+| EOC (week 2)                 | Wed 01/14/2026 | Wed 01/14/2026 |
+| EOC (week 3)                 | Wed 01/21/2026 | Wed 01/21/2026 |
+| EOC (week 4)                 | Wed 01/28/2026 | Wed 01/28/2026 |
+| EOC (week 5)                 | Wed 02/04/2026 | Wed 02/04/2026 |
+| EOC (week 6)                 | Wed 02/11/2026 | Wed 02/11/2026 |
+| EOC (week 7)                 | Wed 02/18/2026 | Wed 02/18/2026 |
+| EOC (week 8)                 | Wed 02/25/2026 | Wed 02/25/2026 |
+| EOC (week 9)                 | Wed 03/04/2026 | Wed 03/04/2026 |
+| EOC (week 10)                | Wed 03/11/2026 | Wed 03/11/2026 |
 
 <!-- - [EOC (week 1)](https://forms.gle/RGd3qzQR4ue9HvfR8) -->
 <!-- - [EOC (week 2)](https://forms.gle/XMnf7cxrxmbcAA5k6) -->
