--- a/course-materials/assignments/HW2.qmd
+++ b/course-materials/assignments/HW2.qmd
@@ -1,77 +1,98 @@
 ---
-title: "HW #2: Final Project (Finding Data)"
-subtitle: "Assigned Wed 01/14/2026 | Due Wed 01/21/2026"
+title: "HW #2: Visualizing FEMA NRI Data"
+subtitle: "Assigned Wed 01/21/2026 | Due Wed 01/28/2026"
 editor_options: 
   chunk_output_type: console
 ---
 
-::: {.callout-important}
-TODO: revise assignment; add final Q about using genAI; update submission instructions to include upload to gradescope
-:::
-
-## Learning Outcomes {#LOs}
-
-***Note:** This HW is the the first step in working towards your final course assignment, [HW #4](HW4.qmd){target="_blank"} (we'll be breaking it down a bit, week-by-week). **This week, we'll mostly be focused on some prep work.** Your final assignment is meant to combine nearly all of the course learning outcomes(!):*
+## Learning Outcomes {#p1-learning-outcomes}
 
 - identify which types of visualizations are most appropriate for your data and your audience
 - prepare (e.g. clean, explore, wrangle) data so that it's appropriately formatted for building data visualizations
-- build effective, responsible, accessible, and aesthetically-pleasing visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
-- write code from scratch and read and adapt code written by others
-- apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations 
+- build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 
-## Description {#description}
+## Description {#p1-description}
 
-### a. Review HW #4 instructions {#part-a}
+In class, we've been discussing strategies and considerations for choosing the right graphic form to represent your data and convey your intended message. Here, you'll apply what we're learning to natural hazards and demographics data, courtesy of the **[FEMA National Risk Index](https://hazards.fema.gov/nri/){target="_blank"} (NRI)** and the **[US Census Bureau's American Community Survey](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"} (ACS)**.
 
-[**Begin by reading [HW #4](HW4.qmd){target="_blank"} in full**]{.teal-text} so that you have a clear understanding of the options, goals, and requirements for your final class assignment. 
+### 1a. Background reading {#p1a-background}
 
-### b. Find data and brainstorm questions {#part-b}
+Unfold the following note to read more about the data before continuing on (collapsed to save space):
 
-Now that you have a better understanding of where we're headed, let's make a bit of progress towards that end goal. [**This week, you'll focus on finding data that interest you and begin brainstorming some questions that you might explore / answer using those data.**]{.teal-text} Your data set(s) may be related to a past project, or even your current Capstone or GP. It may also be a completely new data set(s), unrelated to anything you're currently working on. Explore the [Data sources](../../resources.qmd#data-sources){target="_blank"} section of the course website's resources page if you need some inspiration on where to start (you are *not* limited to just these data sources): 
+::: {.callout-note collapse=true}
+## About the data
+
+#### About FEMA's National Risk Index (NRI) for Natural Hazards
+
+[FEMA](https://www.fema.gov/about/strategic-plan/about-fema){target="_blank"} (Federal Emergency Management Agency) is a government agency with a mission of helping people before, during, and after disasters. In 2021, FEMA launched the **[National Risk Index (NRI)](https://hazards.fema.gov/nri/){target="_blank"}**, "a [dataset](https://hazards.fema.gov/nri/data-resources){target="_blank"} and [online tool](https://hazards.fema.gov/nri/map){target="_blank"} to help illustrate the United States communities most at risk for [18 natural hazards](https://hazards.fema.gov/nri/natural-hazards){target="_blank"}".
+
+**Risk** is defined as the potential for negative impacts resulting from natural hazards. It's calculated using the following equation (and illustrated in [this graphic](https://hazards.fema.gov/nri/Content/Images/StaticPageImages/Risk_Index_Calculation.svg){target="_blank"}; read more about [determining risk](https://hazards.fema.gov/nri/determining-risk){target="_blank"}):
+
+$$Risk\:Index = Expected\:Annual\:Loss \times \frac{Social\:Vulnerability}{Community\:Resilience}$$
+
+NRI provides hazard type-specific scores, as well as a composite score, which adds together the risk from all 18 hazard types. A community's **risk score** is represented by its percentile ranking among all other communities at the same level for Risk, Expected Annual Loss, Social Vulnerability and Community Resilience -- for example, if a given county's Risk Index percentile for a hazard type is 84.32 then its Risk Index value is greater than 84.32% of all US counties. Each community is also assigned a **risk rating**, which is a qualitative rating that describes the community in comparison to all other communities at the same level, ranging from “Very Low” to “Very High.”
+
+You can learn more about the NRI at [hazards.fema.gov/nri](https://hazards.fema.gov/nri/learn-more){target="_blank"}.
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "80%"
+#| fig-align: "center"
+knitr::include_graphics("images/NRI.png")
+```
+
+::: {.center-text .gray-text .body-text-s}
+*Screenshot of the [The National Risk Index's interactive mapping and data-based interface](https://hazards.fema.gov/nri/map)*
+:::
+
+#### Accessing NRI Data
+
+Data at the county- and census tract-level are available for download in multiple formats (including Shapefiles & CSVs) from NRI's [Data Resources page](https://hazards.fema.gov/nri/data-resources){target="_blank"}.
+
+### About the US Census Bureau's American Community Survey (ACS)
+
+The **[American Community Survey (ACS)](https://www.census.gov/programs-surveys/acs/about.html){target="_blank"}** is a nationwide, continuous survey designed to provide communities with reliable and timely social, economic, housing, and demographic data every year. Unlike the **Decennial Census** (which counts every person in the US every 10 years for the purpose of congressional appointment), the ACS collects detailed information from a small subset of the population (~3.5 million households) at 1- and 5-year intervals. Learn more about the [differences between these 1- and 5-year estimates](https://www.census.gov/programs-surveys/acs/guidance/estimates.html){target="_blank"}.
+
+#### Accessing ACS Data
+
+The US Census Bureau provides a couple of tools for accessing their data, including: 
+
+1. **[data.census.gov](https://data.census.gov){target="_blank"}:** a browser-based portal for exploring the many available [data tables](https://data.census.gov/table){target="_blank"} (e.g. [Table B02001](https://data.census.gov/table?q=B02001){target="_blank"}: Race)
+2. **[The Census Data API](https://www.census.gov/data/developers/data-sets.html){target="_blank"}:** a data service that enables software developers to access and use Census Bureau data within their applications
+
+*However,* when working in R, the **[`{tidycensus}`](https://walker-data.com/tidycensus/){target="_blank"} package** is arguably the easiest way to query and retrieve Census data -- use the [`get_acs()` function](https://walker-data.com/tidycensus/articles/basic-usage.html#working-with-acs-data){target="_blank"} to obtain ACS data for specified geographies (e.g. counties or census tracts), tables (e.g. B02001), variables (e.g. B02001_002, B02001_003), years (e.g. 2023), states (e.g. CA), surveys (e.g. acs1, acs5), etc.
+:::
+
+[**The following sections (Part 1b - 1d) should be completed via GitHub Classroom (find and accept the assignment link on Slack). Read on for the full assignment description.**]{.teal-text}
+
+### 1b. Create viz #1 + answer questions {#p1b-viz1}
+
+Create a data viz that helps to answer the question, [***How do FEMA National Risk Index scores for counties in California compare to those in other states?***]{.teal-text}, following these steps:
+
+1. **Download and unzip the data:** You'll use the [All Counties - County-level detail (Table)](https://hazards.fema.gov/nri/Content/StaticDocuments/DataDownload//NRI_Table_Counties/NRI_Table_Counties.zip) (2023 Release; accessed on the [NRI Data Resources page](https://hazards.fema.gov/nri/data-resources#csvDownload){target="_blank"}). Unzip the file, then drop the whole `NRI_Table_Counties/` folder into a `data/` folder in your HW repository.
+2. **Add your `data/` folder to `.gitignore`**: So we don't accidentally push our data to GitHub!
+3. **Read in `NRIDataDictionary.csv`:** `NRI_Table_Counties/` contains a few different files, including this CSV file which describes each of the NRI variables found in `NRI_Table_Counties.csv`. This is a helpful place to start!
+4. **Read in `NRI_Table_Counties.csv`:** This is your data.
+5. **Build your viz:** This may require some data wrangling first. Your final viz should: 
+    - [ ] include data for the 50 US states only (no territories)
+    - [ ] include a title (short, descriptive) & subtitle (describes main takeaway) (see [Fundamentals of Data Visualization, Ch 22](https://clauswilke.com/dataviz/figure-titles-captions.html){target="_blank"} for an example), a caption (describes the data source, e.g. "Data: FEMA National Risk Index (2023 Release)"), and alt text (following the formula described in [week 3 discussion](../discussion/week3/.qmd#discussion-materials){target="_blank"}; use the `fig-alt` code chunk option to apply your alt text)
+    - [ ] consider and implement strategies for highlighting trends / important information (e.g. arranging data, highlighting data, adjusting scales)
+    - [ ] use custom colors (if applicable), rather than ggplot defaults 
+    - [ ] have an updated / polished theme (you'll learn more about fine-tuning ggplot themes in [week 4 discussion](../week4.qmd#discussion-materials){target="_blank"}) 
 
 ::: {.callout-tip}
-## Asking the right question is *critical* and also one of the most challenging steps
+## BEFORE you start wrangling / building your viz, be sure to...
 
-I highly recommend checking out the following resources before diving in:
+- identify / jot down your variables of interest and consider which data types they are
+- use online tools like [from Data to Viz](https://www.data-to-viz.com/){target="_blank} to help determine appropriate graph types, given your variables 
+- roughly sketch out your plots by hand (I find this *incredibly* helpful for understanding how my data needs to be wrangled to achieve my desired output(s))
 
-- this short Substack piece by [Enrico Bertini](https://enrico.bertini.io/){target="_blank"}, titled [*Asking the right data questions and asking the data questions right*](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"}, for some great insights on the challenges and approaches to discovering and revising your data question
-- this TED talk titled, [The Power in Effective Data Storytelling](https://www.youtube.com/watch?v=0e52QfQngrM){target="_blank"}, by [Malavica Sridhar](https://www.linkedin.com/in/malavica-sridhar/){target="_blank"} (~15 min; yes, I know the audio gets a little wonky part-way through {{< fa face-smile title="a smiling face" >}})
+(You'll also want to repeat this process when creating your second data viz in [Part 1c](HW2.qmd#p1c-viz2))
 :::
 
-### c. Answer questions {#part-c}
-
-[**Once you've found your data set(s), answer the following questions:**]{.teal-text}
-
-- [ ] **1.** Which of the [options](HW4.qmd#hw4-options){target="_blank"} are you most interested in pursuing (**Important:** If you plan to pursue [Option 3](HW4.qmd#option3-alternative){target="_blank}, you must submit your proposal by the HW #1 due date)? It's okay if you change your mind later on, but it's helpful to decide on a starting point. 
-- [ ] **2.** Describe your data set(s). Be sure to address the following:
-    - [ ] **a.** Where did you find these data?
-    - [ ] **b.** What variables do these data contain? Is there sufficient metadata for understanding what those variables are?
-- [ ] **3.** What steps are involved in downloading or accessing the data (e.g. "I can download using a button via this online portal," "I need to use an API to retrieve the data," "There's an R package with functions for accessing the API,"  etc.)?
-- [ ] **4.** What question(s) do you hope to answer using these data (remember to read over Enrico Bertini's [article](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"})? 
-- [ ] **5.** Will you need to combine multiple data sets to successfully answer your question(s)? If so, have you found all the necessary data? Do you have a way to combine it (e.g. matching key values across all data sets)?
-- [ ] ***Optional:** Import your data into R! (this will be a part of the next homework assignment) **IMPORTANT:** If your data files are large (>2GB) DO NOT push your data to GitHub -- instead, add your data file(s) or entire data folder to your `.gitignore` (you'll practice this in week 1 discussion section).*
-
-## Rubric (specifications) {#specs}
-
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for Assignment #1, Part II:
-
-::: {.callout-important}
-## Part 2 to be completed under your own GitHub profile
-Complete the following step under your own personal GitHub profile, *not* via GitHub Classroom. See details below.
-:::
-
-- [ ] Create a GitHub repository named `yourLastName-eds240-HW4`, which is where you'll be doing any / all work related to Assignment #4. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
-- [ ] Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) (find the **Issues** tab in the top menu bar of your `lastName-eds240-HW4` repo, then click **New issue**) and name it, `HW1 - finding data / initial brainstorming`. Address the following in your issue:
-    - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for Assignment #4.
-    - [ ] Answer all five Part 2c questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
-    - [ ] Ensure that your GitHub issue is neatly organized / formatted (you can use Markdown syntax here!).
-    - [ ] Tag your instructor (**[@samanthacsik](https://github.com/samanthacsik){target="_blank"}**) and TA (**[@annieradams](https://github.com/annieradams){target="_blank"}**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
-- [ ] Importing your data is *optional* -- if you'd like to start playing around with your data, do so in a file named, `HW1-find-data.qmd`.
-- [ ] Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1VizY_Yc1m_EwudpIHcCPHlFIo8BIXyoQzlcFg7FhRiw/edit?usp=sharing){target="_blank"} by 11:59pm on Sat 01/18/2025.
-- [ ] ***Optional:** If you are pursuing ([Option 3](HW4.qmd#option3-alternative){target="_blank"}), please share a Google Doc with your proposal via email by 11:59pm on Sat 01/18/2025. Be sure to send it to both your instructor (**scsik@ucsb.edu**) and TA (**annieradams@ucsb.edu**) with the subject line: **EDS 240 HW4 Proposal Submission.***
-
-<br>
-
-::: {.center-text .large-fa-icon .teal-text}
-{{< fa table title="A data table with two columns and two rows" >}} End HW #2 {{< fa table title="A data table with two columns and two rows" >}}
-:::
+6. **Answer the following questions:**
+    - [ ] **a.** What are your variables of interest and what kinds of data (e.g. numeric, categorical, ordered, etc.) are they (a bullet point list is fine)?
+    - [ ] **b.** How did you decide which type of graphic form was best suited for answering the question? What alternative graphic forms could you have used instead? Why did you settle on this particular graphic form?
+    - [ ] **c.** What modifications did you make to this viz to make it more easily readable?
+    - [ ] **d.** Is there anything you wanted to implement, but didn't know how? If so, please describe.
