--- a/course-materials/assignments/final-project.qmd
+++ b/course-materials/assignments/final-project.qmd
@@ -11,7 +11,7 @@ This document outlines the overarching goals and outcomes of your EDS 240 Final 
 
 ## Learning Outcomes {#LOs}
 
-Your final assignment is meant to combine all of the course learning outcomes(!):
+Your final project is meant to combine all of the course learning outcomes(!):
 
 - identify which types of visualizations are most appropriate for your data and your audience
 - prepare (e.g. clean, explore, wrangle) data so that it’s appropriately formatted for building data visualizations
@@ -72,18 +72,18 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 
 ### Part II: Share your design process in a blog post-style write up {#partII}
 
-::: {.callout-important}
-ELABORATE ON THIS
-:::
+[**You will discuss your infographic and design process in a short, science communication–style blog post (approximately 500–1,000 words). Your post should engage a broad, non-technical audience and clearly communicate your motivation, questions, data, design choices, challenges, and insights. Your goal is to help readers understand and appreciate both your process and your product.**]{.teal-text}
 
-[Marina Kochuten](https://marinakochuten.github.io/blog-posts/hoverflies/){target="_blank"} (MEDS 2025) does an excellent job...
+An effective post should:
 
-- engaging
-- succinct
-- describes design descisions + implementation approach
-- hide code at end for people to explore if they want to
+- **Open with a compelling hook** that draws readers in and introduces your topic, motivation, and data in an accessible way
+- **Feature your final infographic** as the centerpiece, using it to illustrate your key points
+- **Describe your design journey,** including the questions and goals that guided your choices, the trade-offs you considered, and how you refined your visualizations for clarity, accuracy, and impact
+- **Reflect on your results** and what your visualization reveals about your question or topic
+
+You should aim for a tone that is clear, approachable, and engaging for readers from any background (not just data scientists & programmers!). [Marina Kochuten](https://marinakochuten.github.io/blog-posts/hoverflies/){target="_blank"}'s (MEDS 2025) blog post is great example of how to blend narrative, reflection, and design choices into an accessible science communication piece.
 
 ### Part III: Flash talks {#partIII}
 
-This is a time to celebrate all the creativity, thought and hard work you've put into your final infographics! It's also an opportunity to learn from, and be inspired by, your peers' work. Flash talks will take place in person during finals week. 
+[**You’ll share your final infographic with your peers in a short, 3-minute flash talk.**]{.teal-text} This is a time to celebrate all the creativity, thought and hard work you've put into your final infographics! It's also an opportunity to learn from, and be inspired by, your peers' work. Flash talks will take place in-person during finals week. 
 
