continued revision of assignment schedule and language; much more to do still in revising/rescoping individual assingments

--- a/assignments.qmd
+++ b/assignments.qmd
@@ -46,7 +46,7 @@ You will be building towards your final project deliverables -- a data-driven in
 <!-- - [Homework Assignment #4](course-materials/assignments/HW4.qmd) -->
 <!-- - [End-of-course reflection (SR #3)](course-materials/assignments/SR3-endcourse.qmd)  -->
 
-## End-of-class surveys
+<!-- ## End-of-class surveys
 
 End-of-class surveys (EOCs) will become available at the end of each class (Mondays) and are **due by end-of-day (11:55pm PT)**. Completing EOCs by the due dates / times will, in-part (along with class attendance), determine whether you earn a +/- on your course grade. 
 
@@ -61,7 +61,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | EOC (week 7)                 | Wed 02/18/2026 | Wed 02/18/2026 |
 | EOC (week 8)                 | Wed 02/25/2026 | Wed 02/25/2026 |
 | EOC (week 9)                 | Wed 03/04/2026 | Wed 03/04/2026 |
-| EOC (week 10)                | Wed 03/11/2026 | Wed 03/11/2026 |
+| EOC (week 10)                | Wed 03/11/2026 | Wed 03/11/2026 | -->
 
 <!-- - [EOC (week 1)](https://forms.gle/RGd3qzQR4ue9HvfR8) -->
 <!-- - [EOC (week 2)](https://forms.gle/XMnf7cxrxmbcAA5k6) -->
