--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -1,12 +1,12 @@
 ---
-title: "HW #1: Annotating `{ggplot2}` code"
+title: "HW #1: Interpreting `{ggplot2}` code"
 subtitle: "Assigned Wed 01/07/2026 | Due Wed 01/14/2026"
 editor_options: 
   chunk_output_type: console
 ---
 
 ::: {.callout-important}
-TODO: revise assignment; include genAI component; update LOs; add final Q about using genAI
+TODO: revise assignment -- make focus the responses to questions to verify understanding of each component of the ggplot; include genAI component; update LOs; add final Q about using genAI
 :::
 
 ## Learning Outcomes {#LOs}
