--- a/course-materials/assignments/FPM1.qmd
+++ b/course-materials/assignments/FPM1.qmd
@@ -5,12 +5,8 @@ editor_options:
   chunk_output_type: console
 ---
 
-::: {.callout-important}
-TODO: revise assignment; add final Q about using genAI; update submission instructions to include upload to gradescope; create new rubric for updated specs scheme
-:::
-
 ::: {.callout-note}
-This HW is the the first step in working towards your [final project](final-project.qmd){target="_blank"} (we'll be breaking it down a bit, week-by-week). **This week, we'll mostly be focused on some prep work.** Your final assignment is meant to combine nearly all of the course [learning outcomes](final-project.qmd#LOs){target="_blank"}.
+FPM #1 is the the first step in working towards your [final project](final-project.qmd){target="_blank"}, which is meant to combine nearly all of the course [learning outcomes](final-project.qmd#LOs){target="_blank"}. **This week, we'll be finding data and brainstorming questions.**
 :::
 
 ## Description {#description}
@@ -39,13 +35,13 @@ I highly recommend checking out the following resources before diving in:
 - [ ] **1.** Describe your data set(s). Be sure to address the following:
     - [ ] **a.** Where did you find these data?
     - [ ] **b.** What variables do these data contain? Is there sufficient metadata for understanding what those variables are?
-- [ ] **2.** What steps are involved in downloading or accessing the data (e.g. "I can download using a button via this online portal," "I need to use an API to retrieve the data," "There's an R package with functions for accessing the API,"  etc.)?
+- [ ] **2.** What steps are involved in downloading or accessing the data (e.g. "I can download the data directly from this online portal (e.g. by clicking a button)," "I need to use an API to retrieve the data," "There's an R package with functions for accessing the API,"  "I collected these data myself from a past research project," etc.)?
 - [ ] **3.** What question(s) do you hope to answer using these data (remember to read over Enrico Bertini's [article](https://filwd.substack.com/p/asking-the-right-data-questions-and){target="_blank"})? 
 - [ ] **4.** Will you need to combine multiple data sets to successfully answer your question(s)? If so, have you found all the necessary data? Do you have a way to combine it (e.g. matching key values across all data sets)?
 
 ### IV. (OPTIONAL) Begin cleaning / wrangling your data
 
-This will be a focus of HW #4, but if you're excited to dive in or are looking to get ahead, you should certainly take this time to do so!
+This will be a focus of [FPM #2](FPM2.qmd){target="_blank"}, but if you're excited to dive in or are looking to get ahead, you should certainly take this time to do so!
 
 ::: {.callout-important}
 ## *DO NOT* push large data files to GitHub
@@ -54,19 +50,18 @@ Take care to not push any large data files (>2GB) to GitHub. Instead, add your d
 
 ## Rubric (specifications) {#specs}
 
-You must complete the following, as detailed below, to receive a "Satisfactory" mark for HW #2:
+You must complete the following, as detailed below, to receive a "Satisfactory" mark for FPM #1:
 
-- [ ] Create a GitHub repository named `yourLastName-eds240-infographic`, which is where you'll be doing any / all work related to your final project. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
-- [ ] Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) (find the **Issues** tab in the top menu bar of your `lastName-eds240-HW4` repo, then click **New issue**) and name it, `HW1 - finding data / initial brainstorming`. Address the following in your issue:
-    - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for Assignment #4.
-    - [ ] Answer all four Part 2c questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
+- [ ] **Create a GitHub repository named `yourLastName-eds240-infographic`.** This is where you'll be doing any / all work related to your final project. Be sure to make your repository public, initialize your repository with a `README`, and add a `.gitignore` file.
+- [ ] **Create a [GitHub issue](https://docs.github.com/en/issues/tracking-your-work-with-issues/about-issues) with the title, `HW1 - finding data / initial brainstorming`, and address the following in that issue:**
+    - [ ] Link to (or otherwise prove the existence of) at least one data set that you plan to use for your final project.
+    - [ ] Answer all four Part III questions. There is no set length requirement, but you must answer each question in full to receive a Satisfactory score.
     - [ ] Ensure that your GitHub issue is neatly organized / formatted (you can use Markdown syntax here!).
     - [ ] Tag your instructors (**[@samanthacsik](https://github.com/samanthacsik){target="_blank"}** & **[@annieradams](https://github.com/annieradams){target="_blank"}**) somewhere in your issue (at the start or end may make the most sense) -- this will send us an email notification linking to your issue.
-- [ ] Importing your data is *optional* -- if you'd like to start playing around with your data, do so in a file named, `HW1-find-data.qmd`.
-- [ ] Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1eCGNK4Bl2QHXZ0ucs0wYegm1BiNo9RyI8r17DyrNgM4/edit?gid=0#gid=0){target="_blank"} by 11:59pm on Wed 01/21/2026.
+- [ ] **Add your repository's URL next to your name on [this Google Sheet](https://docs.google.com/spreadsheets/d/1eCGNK4Bl2QHXZ0ucs0wYegm1BiNo9RyI8r17DyrNgM4/edit?gid=0#gid=0){target="_blank"}** by 11:59pm on Wed 01/21/2026.
 
 <br>
 
-::: {.center-text .large-fa-icon .teal-text}
-{{< fa table title="A data table with two columns and two rows" >}} End HW #2 {{< fa table title="A data table with two columns and two rows" >}}
-:::
+<!-- ::: {.center-text .large-fa-icon .teal-text}
+{{< fa table title="A data table with two columns and two rows" >}} End FPM #1 {{< fa table title="A data table with two columns and two rows" >}}
+::: -->
