--- a/course-materials/assignments/FPM2.qmd
+++ b/course-materials/assignments/FPM2.qmd
@@ -5,14 +5,15 @@ editor_options:
   chunk_output_type: console
 ---
 
-## Learning Outcomes (#LOs)
+::: {.callout-note}
+FPM #2 is the the first step in working towards your [final project](final-project.qmd){target="_blank"}, which is meant to combine nearly all of the course [learning outcomes](final-project.qmd#LOs){target="_blank"}. **This week, we'll be creating some exploratory data visualizations.**
+:::
 
 ## Description {#description}
 
-## a. Review final project instructions {#part-a}
+### I. Review the final project instructions {#partI}
 
-[**Please begin by re-reading [HW #4](HW4.qmd) in full**]{.teal-text} as a reminder of the options, goals, and requirements for your final class assignment. 
-
+[**Begin by reading the [final project description](final-project.qmd){target="_blank"} in full**]{.teal-text} so that you have a clear understanding of the goals and requirements. 
 ### b. Import & wrangle data, then create exploratory data viz {#part-b}
 
 [**This week, you’ll focus on importing and wrangling your data (found as part of [HW #1, Part II](HW1.qmd#hw1-p2)), followed by the exploratory data visualization phase. Complete the following:**]{.teal-text} 
