updated all but rubric for FPM #3

--- a/course-materials/assignments/FPM1.qmd
+++ b/course-materials/assignments/FPM1.qmd
@@ -5,6 +5,10 @@ editor_options:
   chunk_output_type: console
 ---
 
+::: {.callout-important}
+TODO: add GenAI survey
+:::
+
 ::: {.callout-note}
 FPM #1 is the the first step in working towards your [final project](final-project.qmd){target="_blank"}, which is meant to combine nearly all of the course [learning outcomes](final-project.qmd#LOs){target="_blank"}. **This week, we'll be finding data and brainstorming questions.**
 :::
