--- a/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
+++ b/course-materials/lecture-slides/lecture9.2-people-as-data-slides.qmd
@@ -1650,7 +1650,7 @@ knitr::include_graphics("images/week8/ipcc-half.png")
 <br>
 
 ::: {.footer}
-Source: The [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"}, by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/){target="_blank"} (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/){target="_blank"}, by Kasha Patel (Washington Post)
+Source: [Figure SPM.1](https://www.ipcc.ch/report/ar6/syr/figures/figure-spm-1){target="_blank"} from the [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"}, by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/){target="_blank"} (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/){target="_blank"}, by Kasha Patel (Washington Post)
 :::
 
 ```{r}
@@ -1688,7 +1688,7 @@ knitr::include_graphics("images/week8/ipcc-full.png")
 <br>
 
 ::: {.footer}
-Source: The [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"}, by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/){target="_blank"} (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/){target="_blank"}, by Kasha Patel (Washington Post)
+Source: [Figure SPM.1](https://www.ipcc.ch/report/ar6/syr/figures/figure-spm-1){target="_blank"} from the [Climate Change 2023 Synthesis Report](https://www.ipcc.ch/report/ar6/syr/downloads/report/IPCC_AR6_SYR_SPM.pdf){target="_blank"}, by the [Intergovernmental Panel on Climate Change](https://www.ipcc.ch/){target="_blank"} (IPCC) | Also see [This visual shows how climate change will affect generations](https://www.washingtonpost.com/climate-environment/2023/03/21/climate-ipcc-report-temperatures-graphic/){target="_blank"}, by Kasha Patel (Washington Post)
 :::
 
 ```{r}
