--- a/resources.qmd
+++ b/resources.qmd
@@ -9,6 +9,7 @@ toc: true
 
 - **[Fundamentals of Data Visualization](https://clauswilke.com/dataviz/), by Claus O. Wilke** -- a primer on making informative and compelling figures
 - **[Better Data Visualizations: A Guide for Scholars, Researchers, and Wonks](https://www.jstor.org/stable/10.7312/schw19310), by [Jonathan Schwabish](https://www.linkedin.com/in/jonathanschwabish/)** -- discusses strategies for creating more effective data visualizations
+- **[The Art of Data Visualization with ggplo2: The TidyTuesday Cookbook](https://nrennie.rbind.io/art-of-viz/), by [Nicola Rennie](https://nrennie.rbind.io/)** -- a collection of Nicola's many *incredible* TidyTuesday creations, with detailed explantions of her creative process and code
 - **[R for Data Science (2e)](https://r4ds.hadley.nz/), by Hadley Wickham, Mine Çetinkaya-Rundel, and Garrett Grolemund** -- an excellent primer on all things R for data wrangling, exploration, visualizing, and communicating, largely focused on using the `{tidyverse}`
 - **[ggplot2: Elegant Graphics for Data Analysis (3e)](https://ggplot2-book.org/), by Hadley Wickham, Danielle Navarro, and Thomas Lin Pedersen** -- helpful for understanding the underlying theory of ggplot2 graphics (NOTE: this is currently (as of November 2023) a work-in-progress, and as the authors put it, "a dumping ground for ideas...we don't recommend reading it" -- it's still worth noting its existence so that you can return to it in the future!)
 - **[Data Visualization: A practical introduction](https://socviz.co/), by Kieran Healy** -- a hands-on intro to the principles and practice of looking at and presenting data using R and ggplot.
@@ -21,6 +22,7 @@ toc: true
 - **[From Data to Viz](https://www.data-to-viz.com/), by Yan Holtz & Conor Healy** -- a decision tree for deciding which chart type is most appropriate for your data
 - **[Chart Suggestions -- A Thought-Starter](https://extremepresentation.typepad.com/files/choosing-a-good-chart-09.pdf), by A. Abela** -- a single pdf decision tree, which uses the four main chart types to guide users towards selecting an appropriate visualization
 - **[Data Viz Project](https://datavizproject.com/), by Ferdio (an infographic and data visualization agency in Copenhagen)** -- [100 different visualizations from one simple dataset](https://100.datavizproject.com/) 
+- **[Visual Vocabulary](https://ft-interactive.github.io/visual-vocabulary/), inspired by the Graphic Continuum by Jon Schwabish and Severino Ribecca** -- a helpful tool for choosing the right chart type based on the data relationship most important in your story
 
 ## Colors {#colors}
 
@@ -99,6 +101,8 @@ toc: true
 - **[Climate Viz](https://blog.datawrapper.de/category/climate-data-vis/), by Datawrapper** -- a collection of blog posts on data visualizations created with [Datawrapper](https://www.datawrapper.de/) that help us (and hopefully you) to understand global warming and what humanity can do against it
 - **[Colors in Data Viz](https://blog.datawrapper.de/category/color-in-data-vis/), by Datawrapper** -- a collection of blog posts on choosing beautiful and appropriate colors for your charts and maps
 - **[Jazz up your ggplots!](https://waterdata.usgs.gov/blog/ggplot-jazz/), by Elmera Azadpour, Althea Archer, Hayler Corson-Dosch & Cee Nell at USGS** -- an awesome blog post with example USGS viz + code; stay up-to-date with cool data happenings at USGS in their [Water Data For The Nation Blog](https://waterdata.usgs.gov/blog/)
+- **[Dataviz Universe](https://blog.yan-holtz.com/), by Yan Holtz** -- a weekly, actionable tip about data viz
+- **[Dataviz Inspiration](https://www.dataviz-inspiration.com/)** -- a large collection of really awesome data viz examples  
 
 ### curated lists {#curated-lists}
 - **[awesome-ggplot2](https://github.com/erikgahner/awesome-ggplot2), by Erik Gahner Larsen** -- a curated list of awesome ggplot2 tutorials, packages etc.
@@ -148,20 +152,22 @@ Data are *everywhere*, but that doesn't mean they're necessarily easy to track d
 - **[DataOne](https://www.dataone.org/)** –  a repository of data repositories! Search across all member repositories (including repositories like [EDI Data Portal](https://portal.edirepository.org/nis/advancedSearch.jsp), [Arctic Data Center](https://arcticdata.io/catalog), [KNB](https://knb.ecoinformatics.org/), etc.) for environmental data (along with curated metadata records)
 - **[EDI Data Portal](https://portal.edirepository.org/nis/advancedSearch.jsp)** – contains environmental and ecological data and metadata derived from publicly funded research contributed by a number of participating organizations (e.g. EDI is the main repository for all [Long Term Ecological Research (LTER)](https://lternet.edu/) data)
 
-### newsletters / data collections {#newsletters-data-collections}
-- **[ESIIL Data Library](https://cu-esiil.github.io/data-library/)** – The Environmental Data Science Innovation and Inclusion Lab (ESIIL) Data Library, which features a diverse range of data sets, each with its own dedicated web page
-- **[Data is Plural](https://www.data-is-plural.com/archive/)** – a weekly newsletter (and seasonal podcast) of useful / curious data sets, published by [Jeremy Singer-Vine](https://www.jsvine.com/)
-- **[tidytuesday](https://github.com/rfordatascience/tidytuesday)** – a weekly social data project that shares minimally-cleaned data sets covering a variety of topics for the [R4DS community](https://rfordatasci.com/) to visualize; organizers share links to the original data sources, as well as the scripts used to clean them prior to publishing
-- **[awesome-public-datasets](https://github.com/awesomedata/awesome-public-datasets)** – a repository containing a list of high quality, topic-centric public data sources 
-- **[Information is Beautiful](https://informationisbeautiful.net/data/)** -- Founded by [David McCandless](https://davidmccandless.com/), Information is Beautiful is dedicated to making sense of the world with graphics & data-visuals. We set out to explain, distill and clarify. All our visualizations are based on facts and data: constantly updated, revised and revisioned.
- - **[Kaggle Datasets](https://www.kaggle.com/datasets)** -- Kaggle is an online community for data scientists and machine learning practitioners to find and publish data, as well as enter competitions to solve data science challenges
-
 ### government agencies {#gov-agencies}
 - **[Centers for Disease Control and Prevention (CDC)](https://data.cdc.gov/)** – there are tons of data sets buried in the pages of this website (you'll likely have to do a bit of digging)
 - **[Data.gov](https://catalog.data.gov/organization/)** – view data sets by the federal agency, state, city, or county that publishes them
 - **[EPA's National Emissions Inventory (NEI) Data Retrieval Tool](https://awsedap.epa.gov/public/single/?appid=20230c40-026d-494e-903f-3f112761a208&sheet=5d3fdda7-14bc-4284-a9bb-cfd856b9348d&opt=ctxmenu,currsel)** – read more about NEI Data on the [EPA's website](https://www.epa.gov/air-emissions-inventories/2020-national-emissions-inventory-nei-data)
 - **[NOAA's National Centers for Environmental Information](https://www.ncei.noaa.gov/)** – specifically, check out their [Climate Monitoring Products](https://www.ncei.noaa.gov/access/monitoring/products/) (I used the [County Mapping](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202310/1/value) interface to download precipitation data featured in [Lecture 5.3](https://samanthacsik.github.io/EDS-240-data-viz/slides/week5.3-choropleth.html#/title-slide)'s choropleth map)
 - **[`{tidycensus}` package](https://walker-data.com/tidycensus/)** – tooling that allows R users to more easily interface with a select number of the [US Census Bureau](https://www.census.gov/)'s data APIs and return tidyverse-ready data frames
+
+### misc data sources {#misc}
+- **[ESIIL Data Library](https://cu-esiil.github.io/data-library/)** – The Environmental Data Science Innovation and Inclusion Lab (ESIIL) Data Library, which features a diverse range of data sets, each with its own dedicated web page
+- **[Data is Plural](https://www.data-is-plural.com/archive/)** – a weekly newsletter (and seasonal podcast) of useful / curious data sets, published by [Jeremy Singer-Vine](https://www.jsvine.com/)
+- **[tidytuesday](https://github.com/rfordatascience/tidytuesday)** – a weekly social data project that shares minimally-cleaned data sets covering a variety of topics for the [R4DS community](https://rfordatasci.com/) to visualize; organizers share links to the original data sources, as well as the scripts used to clean them prior to publishing
+- **[awesome-public-datasets](https://github.com/awesomedata/awesome-public-datasets)** – a repository containing a list of high quality, topic-centric public data sources 
+- **[Information is Beautiful](https://informationisbeautiful.net/data/)** -- Founded by [David McCandless](https://davidmccandless.com/), Information is Beautiful is dedicated to making sense of the world with graphics & data-visuals. We set out to explain, distill and clarify. All our visualizations are based on facts and data: constantly updated, revised and revisioned.
+ - **[Kaggle Datasets](https://www.kaggle.com/datasets)** -- Kaggle is an online community for data scientists and machine learning practitioners to find and publish data, as well as enter competitions to solve data science challenges
+ - **[CalCOFI Data Portal](https://calcofi.org/data/)** -- CalCOFI conducts quarterly cruises off southern & central California to collect a suite of environmental and marine ecosystem data. These data are used to study the California Current, manage its living resources, and monitor the indicators of El Niño and climate change.
+ - **[ERDDAP Datasets](https://www.ncei.noaa.gov/erddap/info/index.html?page=1&itemsPerPage=1000)** -- [ERDDAP™](https://coastwatch.pfeg.noaa.gov/erddap/index.html) (by NOAA) is a scientific data server that gives users a simple, consistent way to download subsets of gridded and tabular scientific datasets in common file formats and make graphs and maps. 
 
 ## Volunteer {#volunteer}
 
